syntax = "proto3";

package guru.qa.grpc.rococo;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rococo";
option java_outer_classname = "RococoGeoProto";

service RococoGeoService {
  rpc CountriesPage(CountriesRequest) returns (CountryListResponse) {}
  rpc GeoTitleAndCountryId(GeoTitleAndCountryIdRequest) returns (GeoResponse) {}
  rpc AddGeo(GeoRequest) returns (GeoResponse) {}
  rpc GeoById(GeoIdRequest) returns (GeoResponse) {}
}

message CountriesRequest {
  uint32 page = 1;
  uint32 size = 2;
}

message CountryListResponse {
  uint32 size = 1;
  uint32 number = 2;
  uint32 total_pages = 3;
  uint32 total_elements = 4;
  repeated CountryResponse countries = 5;
}

message CountryResponse {
  string id = 1;
  string name = 2;
}

message GeoTitleAndCountryIdRequest {
  string  city = 1;
  string country_id = 2;
}

message GeoResponse {
  string id = 1;
  string city = 2;
  CountryResponse country = 3;
}

message GeoRequest {
  string city = 1;
  string country_id = 2;
}

message GeoIdRequest {
  string id = 1;
}